--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,29 @@
 body {
   margin: 0;
-  padding: 0;
   font-family: sans-serif;
+}
+
+.icons {
+  padding: 30px;
+  background: #f2f2f2;
+  display: inline-block;
+  width: 100%;
+}
+
+.cont-icon {
+  margin: 10px;
+  float: left;
+}
+
+.cont-icon span {
+  font-size: 12px;
+  color: #999;
+  margin-bottom: 4px;
+  display: inline-block;
+}
+.icon {
+  background: #fff;
+  padding: 5px;
+  border-radius: 10px;
+  text-align: center;
 }
